--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
@@ -63,7 +63,7 @@ A première vue, on dirait qu'il y a pas mal d'inspirations venant de Remix ou R
 
 🔗 **Liens utiles**:
 
-- 🗺 [Tanner Linsley](https://twitter.com/tannerlinsley/status/1590101866385489929) lance son projet sur Twitter avec un super trailer!
+- 🐦 [Tanner Linsley](https://twitter.com/tannerlinsley/status/1590101866385489929) lance son projet sur Twitter avec un super trailer!
 - 🐦 [Ryan Florence](https://twitter.com/ryanflorence/status/1590194770936463362) pourrait s'inspirer de son travail pour rendre Remix plus typesafe
 
 ---
