--- a/website/newsletter/123/index.mdx
+++ b/website/newsletter/123/index.mdx
@@ -50,7 +50,7 @@ You can [download it here](https://sizzy.co/?utm_campaign=newsletter&utm_source=
 
 **[TanStack Router](https://tanstack.com/router/v1)**
 
-Tanner unveils its new project: a 100% typesafe, framework-agnostic router. An impressive list of features, including:
+Tanner unveils his new project: a 100% typesafe, framework-agnostic router. An impressive list of features, including:
 
 - URL State Management
 - Built-in Caching
@@ -63,7 +63,7 @@ At first glance, it looks like there is some inspiration from Remix or React-Rou
 
 🔗 **Useful links**:
 
-- 🗺 [Tanner Linsley](https://twitter.com/tannerlinsley/status/1590101866385489929) launches his project on Twitter with a great trailer!
+- 🐦 [Tanner Linsley](https://twitter.com/tannerlinsley/status/1590101866385489929) launches his project on Twitter with a great trailer!
 - 🐦 [Ryan Florence](https://twitter.com/ryanflorence/status/1590194770936463362) could use some inspiration from his work to improve Remix type-safety.
 
 ---
