--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -25,7 +25,21 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![FlyCode rend votre app React éditables, sans code - basé sur Git](/emails/issues/124/flycode.jpg)](https://bit.ly/3UPwAoJ)
+
+**[FlyCode rend votre app React éditables, sans code - basé sur Git](https://bit.ly/3UPwAoJ)**.
+
+[FlyCode](https://bit.ly/3wWSi00) (YC S22) rend les applications web React modifiables en quelques minutes afin que les équipes produit et UX puissent itérer et sortir des produits plus rapidement, sans avoir à attendre (ou consommer) le temps des développeurs.
+
+FlyCode lit votre code React et trouve les textes, les images, les design tokens et les événements analytics, puis il permet aux non-codeurs de collaborer, de les modifier et de renvoyer une demande de modification (ils n'ont pas besoin d'accéder à GitHub !).
+
+- Gain de temps de développement
+- Pas d'intégration de code, ça lit simplement votre code !
+- Basé sur GitHub, un robot analyse le code et crée les pull requests
+- Utilisez votre propre stack et vos propres composants
+- Gardez le contrôle de votre base de code
+
+Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/developers)
 
 ---
 
@@ -39,7 +53,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![refine - framework React "headless" 100% open-source pour créer des apps CRUD](/emails/issues/124/refine.jpg)](https://s.refine.dev/github)
+
+**[refine - framework React "headless" 100% open-source pour créer des apps CRUD](https://s.refine.dev/github)**
+
+refine fonctionne de manière transparente avec n'importe quel design ou framework UI. Pour plus de commodité, nous proposons des intégrations prêtes à l'emploi pour Ant Design, Material UI, Mantine et Chakra UI. refine élimine les tâches répétitives nécessaires pour créer des apps CRUD et fournit des solutions standardisées pour les parties critiques comme l'authentification, le contrôle d'accès, le routage, les appels réseau, la gestion des états et l'i18n.
 
 ---
 
