--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -9,6 +9,8 @@ unlisted: true
 
 Salut à tous !
 
+GitHub universe
+
 <Todo />
 
 <!-- truncate -->
@@ -45,7 +47,38 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Timeline of a React Component With Hooks](https://julesblom.com/writing/react-hook-component-timeline) + https://twitter.com/Mega_Jules/status/1591466399536480259
+
+[A Love Letter to React](https://fly.io/blog/love-letter-react/)
+
+[Open Development for Remix](https://remix.run/blog/open-development) + https://twitter.com/remix_run/status/1591173995088736256
+
+[Writing Performant CSS with vanilla-extract](https://www.lekoarts.de/javascript/writing-performant-css-with-vanilla-extract) + https://twitter.com/lekoarts_de/status/1590736441180446720
+
+**[Next.js 13 TypeScript Plugin](https://twitter.com/delba_oliveira/status/1592209522281439232)**
+
+Shu Ding travaille sur un TypeScript language service plugin ([source](https://github.com/vercel/next.js/blob/canary/packages/next/server/next-typescript.ts)) qui améliore significativement la DX de Next.js en apportant de la doc, des nouvelles erreurs et de l'autocomplétion au dessus les conventions Next.js et Server Components. Cela compense l'[impossibilité de typer les exports d'un module ES](https://github.com/microsoft/TypeScript/issues/38511) en TypeScript, feature très demandée par les auteurs de frameworks.
+
+- 📖 React beta docs: [class component API ref (WIP)](https://twitter.com/dan_abramov/status/1592262830304251908)
+- 📜 [Fetching data in React: the case of lost Promises](https://www.developerway.com/posts/fetching-in-react-lost-promises)
+- 📜 [A novel schema-first approach to building forms](https://www.vazco.eu/blog/a-novel-schema-first-approach-to-building-forms)
+- 📜 [Storybook - Interaction tests for user behavior](https://www.chromatic.com/blog/interaction-tests-for-user-behavior/)
+- 📜 [Inside Framer's Magic Motion](https://www.nan.fyi/magic-motion) + https://twitter.com/nandafyi/status/1592295412148637696
+- 📜 [Type-safe environment variables on both client and server with Remix](https://dev.to/gugaguichard/type-safe-environment-variables-on-both-client-and-server-with-remix-54l5)
+- 📜 [React Server vs Client components in Next.js 13](https://kulkarniankita.com/react/react-server-client-components)
+- 📜 [What is a state manager](https://www.reatom.dev/general/what-is-state-manager)
+- [GitHub using React](https://twitter.com/rauchg/status/1591464351990697984) + https://news.ycombinator.com/item?id=33576722 + https://primer.style/react/
+- 📊 [I compared deploy speeds for Reflame, Vercel, Netlify, Cloudflare Pages on the same repo](https://blog.reflame.app/i-compared-deploy-speeds-for-reflame-vercel-netlify-cloudflare-pages-on-the-same-repo) + https://twitter.com/lewisl9029/status/1591530406909997056
+- [GitHub Blocks - Reimagine repositories](https://blocks.githubnext.com/) + MDX ? https://twitter.com/Wattenberger/status/1590768678332956672 + https://twitter.com/FredKSchott/status/1590438076677238784 +
+- 💰 [Remotion - We raised CHF 180k to simplify programmatic video!](https://www.remotion.dev/blog/seed-funding)
+- 🎥 [A Solid Start](https://www.youtube.com/watch?v=DVWu2b7mvFg)
+- 🐦 [Comparison between Next.js 12 and the Next.js 13 experimental `app` dir!](https://twitter.com/lydiahallie/status/1591120215189749760)
+- 📜 [Creating fluffy trees with Three.js (part 1)](https://douges.dev/blog/threejs-trees-1)
+- 🗣 [RemixConf 2023 CFP Open](https://twitter.com/remix_run/status/1590513919902507008)
+- 📦 [Remix-Vite](https://github.com/sudomf/remix-vite): ajoute le support Hot Module Replacement à Remix
+- 📦 [craco 7.0](https://github.com/dilanx/craco/releases/tag/v7.0.0): permet de customiser CRA - support CRA v5
+- 📦 [Redwood 3.3](https://github.com/redwoodjs/redwood/releases/tag/v3.3.0)
+- 📦 [Rockpack 3.0 - create-react-app on steroids + SSR](https://github.com/AlexSergey/rockpack)
 
 <SubscribeFormEmbed />
 
@@ -63,7 +96,11 @@ refine fonctionne de manière transparente avec n'importe quel design ou framewo
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 📜 [Expo-router and remote code](https://medium.com/@dan_tamas/expo-router-and-remote-code-e49f31a33b73)
+- 📦 [JestNative v5.2 matchers - toHaveAccessibilityState()](https://twitter.com/mdj_dev/status/1590724369835524096)
+- 🧵 [Tomasz Sapeta - Expo Modules API thread](https://twitter.com/tsapeta/status/1590353202402115584)
+- 🎙️ [The React Native Show 18 - Module Federation](https://www.callstack.com/podcasts/module-federation)
+- 🎙️ [RNR 252 - Ionic's React Native Portals with Josh Thomas](https://reactnativeradio.com/episodes/rnr-252-ionics-react-native-portals-with-josh-thomas)
 
 ---
 
@@ -83,7 +120,9 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Je code une animation Star Wars en React / Three.js](https://www.youtube.com/watch?v=cYw_old9fqs)
+- [React useState: Ne fais pas cette Erreur](https://www.youtube.com/watch?v=Qyx0ZNUwcnc)
+- [Le moyen le plus simple de faire des formulaires React ](https://www.youtube.com/watch?v=s7B_Wbs-sKw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -93,12 +132,42 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Qwik Showcase](https://qwik.builder.io/showcase/): des scores Lighthouse au top!
+- [Introducing SolidStart: The SolidJS Framework](https://www.solidjs.com/blog/introducing-solidstart): le meta-framework SolidJS sort en beta, avec quelques inspirations du monde React.
+- [Parcel 2.8](https://twitter.com/devongovett/status/1590378157747875840): de belles améliorations: bundling, perf, HMR, code splitting...
+- [TypeScript satisfies operator](https://tomdohnal.com/posts/typescript-satisfies-keyword): bonne illustration de cette nouvelle feature qui arrive dans TypeScript 4.9
+- [Fontpie](https://github.com/pixel-point/fontpie): nouvelle solution CLI pour éviter les layouts shifts de font (voir cette [demo](https://twitter.com/alex_barashkov/status/1590329974409469952) pour comprendre), inspiré du code de `next/font`.
+- [Deno 1.28 - Featuring 1.3 Million New Modules](https://deno.com/blog/v1.28): compatibilité npm, la sécurité en plus. Voir aussi cette [video](https://twitter.com/deno_land/status/1592274094963462144).
+- [The evolution of scalable CSS](https://frontendmastery.com/posts/the-evolution-of-scalable-css/): belle retrospective de l'évolution des techniques CSS, incluant le CSS-in-JS popularisé par React
+- [Why would anyone need JavaScript generator functions?](https://jrsinclair.com/articles/2022/why-would-anyone-need-javascript-generator-functions/)
+- [Stylify - Write CSS Faster](https://stylifycss.com/)
+- [Everything new from GitHub Universe 2022](https://github.blog/2022-11-09-everything-new-from-github-universe-2022/)
+- [Octoverse 2022 - The state of open source software](https://octoverse.github.com/)
+- [Forking Chrome to turn HTML into SVG](https://fathy.fr/html2svg)
+- [This week in stc, 1](https://kdy1.dev/posts/2022/11/stc-update-1)
+- [Change Array By Copy in Chromium](https://twitter.com/robpalmer2/status/1591174422802890754)
+- [ultrahtml 1.0](https://github.com/natemoo-re/ultrahtml)
+- [Announcing Cypress Component Testing GA and Performance Improvements in Cypress 11](https://www.cypress.io/blog/2022/11/08/announcing-cypress-11/)
+- [GreenFrame - measure the carbon footprint of websites](https://marmelab.com/blog/2022/11/09/greenframe-open-source.html)
+- [Doctolib - 10 lessons I learned owning on a Design System for 30+ Product Designers and 200+ Developers](https://medium.com/doctolib/10-lessons-i-learned-owning-on-a-design-system-for-30-product-designers-and-200-developers-c2986e4dbb6f)
+- [Node.js Security Best Practices](https://nodejs.org/en/docs/guides/security/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/supabase/status/1592105080873893890
+
+https://twitter.com/jacobmparis/status/1591619514764251136
+
+https://twitter.com/anuraghazru/status/1591281398455074816
+
+https://twitter.com/Baconbrix/status/1590807029681356800
+
+https://twitter.com/fireship_dev/status/1587587531154989056
+
+https://twitter.com/lukaseder/status/1590301562525876225
+
+https://twitter.com/jaredpalmer/status/1592224664688132096
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
