--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -96,9 +96,9 @@ refine fonctionne de manière transparente avec n'importe quel design ou framewo
 
 ## 📱 React-Native {#react-native}
 
-- 📜 [Expo-router and remote code](https://medium.com/@dan_tamas/expo-router-and-remote-code-e49f31a33b73)
+- 📜 [Expo-router and remote code](https://medium.com/@dan_tamas/expo-router-and-remote-code-e49f31a33b73): montre comment utiliser [react-native-wormhole](https://github.com/cawfree/react-native-wormhole) avec Expo Router pour consommer des composants React-Native sur une url remote. Ca rejoint pas mal l'idée d'avoir des [React-Native Server Components](https://twitter.com/Baconbrix/status/1585058874864062466)
+- 🧵 [Expo Modules API thread](https://twitter.com/tsapeta/status/1590353202402115584): Tomasz Sapeta partage des infos intéressantes sur la nouvelle API pour créer des modules natifs moderns en Swift/Kotlin, y compris quelques évolutions futures comme le support [SwiftUI](https://twitter.com/tsapeta/status/1591003968649728001) / Jetpack Compose.
 - 📦 [JestNative v5.2 matchers - toHaveAccessibilityState()](https://twitter.com/mdj_dev/status/1590724369835524096)
-- 🧵 [Tomasz Sapeta - Expo Modules API thread](https://twitter.com/tsapeta/status/1590353202402115584)
 - 🎙️ [The React Native Show 18 - Module Federation](https://www.callstack.com/podcasts/module-federation)
 - 🎙️ [RNR 252 - Ionic's React Native Portals with Josh Thomas](https://reactnativeradio.com/episodes/rnr-252-ionics-react-native-portals-with-josh-thomas)
 
