--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -11,8 +11,6 @@ Salut à tous !
 
 GitHub universe
 
-<Todo />
-
 <!-- truncate -->
 
 **💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
@@ -49,7 +47,7 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 [Timeline of a React Component With Hooks](https://julesblom.com/writing/react-hook-component-timeline) + https://twitter.com/Mega_Jules/status/1591466399536480259
 
-[A Love Letter to React](https://fly.io/blog/love-letter-react/)
+**[A Love Letter to React](https://fly.io/blog/love-letter-react/)**
 
 [Open Development for Remix](https://remix.run/blog/open-development) + https://twitter.com/remix_run/status/1591173995088736256
 
